feat(interview): delete interview and create review endpoint
